# lightwin

./: .gitignore  CHANGELOG.md  CITATION.cff  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/: Ez.edz  Vcav_and_phis.txt  energy_ref.txt  full_energy_and_MT.txt  matrix_ref.txt
doc/: beam_calculation.rst  beam_calculation.tracewin.rst  conf.py  config.rst  config_manager.rst  core.rst  failures.rst  optimisation.parameters.rst  util.rst
docs/: Makefile  beam_calculation.envelope_1d.rst  beam_calculation.envelope_1d.transfer_matrices_c.rst  beam_calculation.envelope_1d.transfer_matrices_p.rst  beam_calculation.output.rst  beam_calculation.rst  beam_calculation.tracewin.tracewin.rst  conf.py  config.failures.failed_cavities.rst  config.failures.position.rst  config.failures.rst  config.optimisation.algorithm.rst  config.optimisation.objective.rst  config.optimisation.rst  config.rst  core.accelerator.rst  core.commands.command.rst  core.commands.rst  core.electric_field.rst  core.element_or_command.rst  core.elements.aperture.rst  core.elements.element.rst  core.elements.rst  core.elements.solenoid.rst  core.list_of_elements.factory.rst  core.list_of_elements.helper.rst  core.list_of_elements.rst  core.list_of_elements_factory.rst  core.rst  evaluator.list_of_simulation_output_evaluators.rst  evaluator.rst  evaluator.simulation_output_evaluator.rst  evaluator.simulation_output_evaluator_presets.rst  evaluator.testers.rst  failures.fault.rst  failures.position.rst  failures.rst  failures.set_of_cavity_settings.rst  failures.strategy.rst  index.rst  (+24 more)
doctrees/: beam_calculation.beam_calculator.doctree  beam_calculation.doctree  beam_calculation.envelope_1d.beam_parameters_factory.doctree  beam_calculation.envelope_1d.doctree  beam_calculation.envelope_1d.element_envelope1d_parameters.doctree  beam_calculation.envelope_1d.element_envelope1d_parameters_factory.doctree  beam_calculation.envelope_1d.envelope_1d.doctree  beam_calculation.envelope_1d.simulation_output_factory.doctree  beam_calculation.envelope_1d.transfer_matrices_c.doctree  beam_calculation.envelope_1d.transfer_matrices_p.doctree  beam_calculation.envelope_1d.transfer_matrix_factory.doctree  beam_calculation.envelope_3d.beam_parameters_factory.doctree  beam_calculation.envelope_3d.doctree  beam_calculation.envelope_3d.element_envelope3d_parameters.doctree  beam_calculation.envelope_3d.element_envelope3d_parameters_factory.doctree  beam_calculation.envelope_3d.envelope_3d.doctree  beam_calculation.envelope_3d.simulation_output_factory.doctree  beam_calculation.envelope_3d.transfer_matrices_p.doctree  beam_calculation.envelope_3d.transfer_matrix_factory.doctree  beam_calculation.factory.doctree  beam_calculation.integrators.doctree  beam_calculation.integrators.rk4.doctree  beam_calculation.parameters.doctree  beam_calculation.parameters.element_parameters.doctree  beam_calculation.parameters.factory.doctree  beam_calculation.simulation_output.doctree  beam_calculation.simulation_output.factory.doctree  beam_calculation.simulation_output.simulation_output.doctree  beam_calculation.tracewin.beam_parameters_factory.doctree  beam_calculation.tracewin.doctree  beam_calculation.tracewin.element_tracewin_parameters.doctree  beam_calculation.tracewin.element_tracewin_parameters_factory.doctree  config.beam.doctree  (+155 more)
(+950 files in other folders)
