[project]
authors = [
   { name = "Adrien Plaçais", email = "placais@lpsc.in2p3.fr" },
   { name = "Bruce Yee-Rendon", email = "byee@post.j-parc.jp" },
   { name = "Frédéric Bouly", email = "bouly@lpsc.in2p3.fr" },
]
classifiers = [
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
   "Programming Language :: Python :: 3",
]
description = "Automatically compensate cavity failures in linacs"
name = "LightWin"
readme = "README.md"
requires-python = ">=3.12"
version = "0.6.16"

[project.urls]
Homepage = "https://gitlab.in2p3.fr/adrien.placais/lightwin"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--strict-markers"]
filterwarnings = ["ignore:.*cKDTree.*:DeprecationWarning"]
markers = [
   "cython: mark tests that require a Cython compilation (deselect with '-m \"not cython\"')",
   "implementation: mark tests currently under implementation",
   "slow: mark a test as slow (deselect with '-m \"not slow\"')",
   "smoke: mark quick and critical tests (select with '-m smoke')",
   "tmp: mark to select specific tests for debug",
   "tracewin: mark tests requiring a working installation of TraceWin (deselect with '-m \"not tracewin\"')",
]
minversion = "6.0"
testpaths = ["tests"]

[tool.isort]
profile = "black"
src_paths = ["./source"]

[tool.black]
line-length = 79
